--- a/smooth_scrolling/templates/smooth-scrolling-template.html
+++ b/smooth_scrolling/templates/smooth-scrolling-template.html
@@ -5,8 +5,8 @@
 <script src="https://unpkg.com/lenis@1.3.3/dist/lenis.min.js"></script>
 
 <!-- Include component files -->
-<link rel="stylesheet" href="YOUR-DOMAIN/smooth_scrolling/css/smooth-scrolling.css">
-<script src="YOUR-DOMAIN/smooth_scrolling/js/smooth-scrolling.js"></script>
+<link rel="stylesheet" href="https://fisrafilov-isl.github.io/smooth_scrolling/css/smooth-scrolling.css">
+<script src="https://fisrafilov-isl.github.io/smooth_scrolling/js/smooth-scrolling.js"></script>
 
 <!-- 
 NO ADDITIONAL HTML NEEDED - The component automatically works with your existing Tilda content!
